Your descriptive message about these changes

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a class="btn secondary" href="#about">About</a>
         <a class="btn secondary" href="#uses">Features</a>
         <a class="btn" href="http://localhost/new%20by%20sam/login.php">Login</a>
-        <a class="btn" href="http://localhost/finalproject/old/rohan/register.php">Register</a>
+        <a class="btn" href="http://localhost/new%20by%20sam/login.php">Register</a>
       </nav>
     </header>
 
@@ -106,7 +106,7 @@
           <p class="lead">Create, schedule and evaluate tests quickly. Students can take exams on any device while instructors get real-time reports and analytics.</p>
 
           <div class="cta-row">
-            <a class="btn" href="http://localhost/finalproject/old/rohan/register.php">Get Started — Register</a>
+            <a class="btn" href="http://localhost/new%20by%20sam/login.php">Get Started — Register</a>
             <a class="btn secondary" href="http://localhost/new%20by%20sam/login.php">Sign In</a>
           </div>
 
@@ -156,7 +156,7 @@
 
             <div style="margin-top:1rem;display:flex;gap:.6rem">
               <a class="btn" href="http://localhost/new%20by%20sam/login.php">Browse Exams</a>
-              <a class="btn secondary" href="http://localhost/finalproject/old/rohan/register.php">Create Account</a>
+              <a class="btn secondary" href="http://localhost/new%20by%20sam/login.php">Create Account</a>
             </div>
           </div>
         </aside>
@@ -206,7 +206,7 @@
           <h4>Quick Links</h4>
           <nav class="footer-links" aria-label="Footer navigation">
             <a href="http://localhost/new%20by%20sam/login.php">Login</a>
-            <a href="http://localhost/finalproject/old/rohan/register.php">Register</a>
+            <a href="http://localhost/new%20by%20sam/register.php">Register</a>
             <a href="http://localhost/new%20by%20sam/exam.php">Browse Exams</a>
             <a href="#about">About</a>
           </nav>
